Ticket #3783 - Button size in Block tabs. Related layout issue in Studio.

--- a/studio/template/css/common.less
+++ b/studio/template/css/common.less
@@ -33,28 +33,8 @@ a:hover > .sys-icon-a i {
 .bx-db-header {
     padding: 1.0rem 1.5rem;
 }
-.bx-db-menu-tab-btn .bx-btn {
-    height: 1.5rem;
-    line-height: 1.5;
-
-    font-size: 0.875rem;
-}
-.bx-db-menu-tab-btn .bx-btn,
-.bx-db-menu-tab-btn .bx-btn:active,
-.bx-db-menu-tab-btn .bx-btn:hover {
-    border-color: transparent;
-    background-color: transparent;
-}
-.bx-db-menu-tab-btn .bx-btn,
-.bx-db-menu-tab-btn .bx-btn .sys-icon {
-    color: rgba(68, 134, 244, 1.0);
-}
-.bx-db-menu-tab-btn .bx-btn .sys-icon {
-    font-size: 1rem;
-}
-.bx-db-menu-tab-btn .bx-btn:active .sys-icon,
-.bx-db-menu-tab-btn .bx-btn:hover .sys-icon {
-    color: rgba(68, 134, 244, 0.8);
+.bx-db-header .bx-db-menu-tab-btn .bx-btn {
+    display: inline-flex;
 }
 .bx-db-content.bx-def-padding-top {
     padding: 1rem;
